WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123478
Fix memory leak in Tools/DumpRenderTree/TestNetscapePlugIn/main.cpp
https://bugs.webkit.org/show_bug.cgi?id=123478
Summary
Fix memory leak in Tools/DumpRenderTree/TestNetscapePlugIn/main.cpp
Seokju Kwon
Reported
2013-10-29 16:27:14 PDT
Add a missing free() for 'obj->evaluateScriptOnMouseDownOrKeyDown'.
Attachments
Patch
(1.31 KB, patch)
2013-10-29 16:28 PDT
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Patch
(1.33 KB, patch)
2013-10-29 16:30 PDT
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2013-10-29 16:28:50 PDT
Created
attachment 215442
[details]
Patch
Seokju Kwon
Comment 2
2013-10-29 16:30:20 PDT
Created
attachment 215443
[details]
Patch
WebKit Commit Bot
Comment 3
2013-10-29 17:23:24 PDT
Comment on
attachment 215443
[details]
Patch Clearing flags on attachment: 215443 Committed
r158240
: <
http://trac.webkit.org/changeset/158240
>
WebKit Commit Bot
Comment 4
2013-10-29 17:23:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug