Fix memory leak in Tools/DumpRenderTree/TestNetscapePlugIn/main.cpp https://bugs.webkit.org/show_bug.cgi?id=123478

Reviewed by Anders Carlsson.

* DumpRenderTree/TestNetscapePlugIn/main.cpp:
(NPP_Destroy): Add a missing free() for 'obj->evaluateScriptOnMouseDownOrKeyDown'.


Canonical link: https://commits.webkit.org/141608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158240 268f45cc-cd09-0410-ab3c-d52691b4dbfc